# nycmesh-calendar-bot

./: .dockerignore  .env_example  Dockerfile  README.md  app.py  converter.py  docker-compose.yml  google_calendar.py  pyproject.toml  pytest.ini  query.py  query_slack.py  requirements.txt  update_and_restart.sh
.github/workflows/: deploy.yml  to_docker_hub.yml
src/calendar_bot/: app.py  config.py  constants.py  create_events.py  event_extractor.py  google_calendar.py  query_slack.py  slack.py
src/calendar_bot/cli/: bot_server.py
src/calendar_bot/utils/: block_kit_templates.py  date_utils.py  format_event_description.py  message_classification.py  post_event.py
tests/: create_events_util.py  test_app.py  test_event_extractor.py  test_event_extractor_util.py  test_google_calendar_client.py  test_post_event.py
tests/data/: messages.json
tests/util/: create_events_util.py  event_extractor_util.py
utils/: date_utils.py
